--- a/src/main/resources/templates/gr/customer/myaccountdropchk.html
+++ b/src/main/resources/templates/gr/customer/myaccountdropchk.html
@@ -242,43 +242,8 @@
             border-radius: 0;
         }
 
-        .total_btn{
-            text-align: center;
-        }
 
-        .total_btn .btn:first-child{
-            width: 1240px;
-        }
 
-        /* .total_btn .cancel-btn{
-            min-width: 120px;
-            padding: 0 20px;
-            height: 50px;
-            text-align: center;
-            line-height: 48px;
-            border: 1px solid #333;
-            background-color: #fff;
-            color: #000;
-            font-size: 14px;
-            vertical-align: middle;
-        } */
-
-        
-
-        .total_btn .btn{
-            min-width: 120px;
-            height: 39px;
-            font-size: 14px;
-            line-height: 38px;
-            background-color: #000;
-            color: #fff;
-            display: inline-block;
-            padding: 0 20px;
-            text-align: center;
-            border: 1px solid #333;
-            border-radius: 0;
-            vertical-align: middle;
-        }
 
 
 
@@ -310,7 +275,7 @@
                     &nbsp;&nbsp;>&nbsp;&nbsp;
                     <a th:href="@{/customer/myinfochk.do}" class="semi-title">정보관리</a>
                     &nbsp;&nbsp;>&nbsp;&nbsp;
-                    <a th:href="@{/customer/myinfochk.do}" class="semi-title">회원정보 수정</a>
+                    <a th:href="@{/customer/myaccountdropchk.do}" class="semi-title">회원 탈퇴</a>
                     &nbsp;&nbsp;
                 </li>
             </ol>
