--- a/src/main/resources/templates/gr/customer/myinfo.html
+++ b/src/main/resources/templates/gr/customer/myinfo.html
@@ -14,6 +14,7 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <th:block th:gragment="mypageCSS">
         <style>
@@ -180,14 +181,14 @@
             margin: 0px 0px;
         }
 
-        /* 비밀번호 확인 창 */
-        .myinfochk{
+        /* 회원정보수정 내용 */
+        .myinfo{
             width: 1240px;
             margin: 0 auto;
         }
 
         .title{
-            height: 41px;
+            height: 70px;
             position: relative;
             margin-bottom: 10px;
         }
@@ -204,68 +205,77 @@
             font-weight: bold;
         }
 
-        .myinfochk .passwordchk-box{
-            width: 1234px;
-            height: 200px;
-            border: 3px solid #EFEFEF;
+        .title h4{
+            font-size: 18px;
+            padding-top: 17px;
         }
 
-        .myinfochk .passwordchk-box .chk_guide{
-            margin: 48px 0 0 0;
+        /* 수정 테이블 내용 */
+        table{
+            border-top: 3px solid#171717;
+            border-bottom: 1px solid#171717;
+            table-layout: fixed;
+            margin-bottom: 60px;
+            width: 1240px;
+            border-collapse: separate;
+            border-spacing: 0;
+            display: table;
+        }
+
+        tbody{
+            display: table-row-group;
+            vertical-align: middle;
+        }
+
+        tr{
+            display: table-row;
+            vertical-align: inherit;
+        }
+
+        table tbody tr:first-child th{
+            border-color: transparent;
+            border: none;
+        }
+
+        table tbody th{
+            width: 315px;
+            height: 95px;
+            padding-left: 53px;
+            counter-reset: #333;
             font-size: 16px;
+            text-align: left;
         }
 
-        .myinfochk .passwordchk-box input[type="password"]{
+        table tbody td{
+            padding: 0 19px;
+            color: #000;
+            font-size: 16px;
+
+        }
+
+        th, td{
+            word-break: break-all;
+            background-clip: padding-box;
+            padding: 0;
+            display: table-cell;
+            vertical-align: inherit;
+        }
+
+        input[type="text"]{
             height: 40px;
+            width: 380px;
             margin-right: 5px;
             line-height: 38px;
             padding-left: 20px;
+            font-size: 14px;
             background-color: #f2f2f2;
             border: 1px solid #efefef;
-            font-size: 14px;
             vertical-align: middle;
-            margin-top: 25px;
         }
-
-        .myinfochk .passwordchk-box .btn{
-            min-width: 140px;
-            height: 40px;
-            font-size: 14px;
-            line-height: 38px;
-            background-color: #000;
-            color: #fff;
-            display: inline-block;
-            padding: 0 20px;
-            text-align: center;
-            border: 1px solid #333;
-            margin-top: 25px;
-            border-radius: 0;
-        }
-
-        .total_btn{
-            text-align: center;
-        }
-
-        .total_btn .btn:first-child{
-            width: 1240px;
-        }
-
-        /* .total_btn .cancel-btn{
-            min-width: 120px;
-            padding: 0 20px;
-            height: 50px;
-            text-align: center;
-            line-height: 48px;
-            border: 1px solid #333;
-            background-color: #fff;
-            color: #000;
-            font-size: 14px;
-            vertical-align: middle;
-        } */
 
         
 
-        .total_btn .btn{
+        .table-box .tbl_info .btn-nickname{
             min-width: 120px;
             height: 39px;
             font-size: 14px;
@@ -280,13 +290,106 @@
             vertical-align: middle;
         }
 
+        table tbody td p{
+            display: inline-block;
+            margin: 0;
+        }
+
+        .changepassword input[type="password"]{
+            height: 40px;
+            width: 360px;
+            margin-right: 5px;
+            line-height: 38px;
+            padding-left: 20px;
+            background-color: #f2f2f2;
+            border: 1px solid #efefef;
+            font-size: 14px;
+            vertical-align: middle;
+        }
+
+        .changepassword label{
+            display: inline-block;
+            width: 124px;
+            color: #666;
+            line-height: 40px;
+            float: left;
+            margin-right: 50px;
+        }
+
+        .changepassword .btn-password{
+            min-width: 120px;
+            height: 39px;
+            font-size: 14px;
+            line-height: 38px;
+            background-color: #000;
+            color: #fff;
+            display: inline-block;
+            padding: 0 20px;
+            text-align: center;
+            border: 1px solid #333;
+            border-radius: 0;
+            vertical-align: middle;
+        }
+
+        .email-box .email-test input[type="text"]{
+            width: 150px; 
+            height: 40px;
+            padding: 5px; 
+            border: 1px solid #efefef;
+        }
+
+        .email-box .email-test input:readonly{
+            background-color: #dedede;
+        }
+
+        .email-box .email-test select{
+            width: 150px;
+            height: 35px;
+            padding: 7px;
+            vertical-align: middle;
+        }
+
+        .total_btn{
+            margin-top: 30px;
+        }
+
+        .total_btn .cancel-btn{
+            min-width: 150px;
+            height: 39px;
+            font-size: 14px;
+            line-height: 38px;
+            background-color: #fff;
+            color: #333;
+            display: inline-block;
+            padding: 0 20px;
+            text-align: center;
+            border: 1px solid #333;
+            border-radius: 0;
+            vertical-align: middle;
+            margin-right: 20px;
+        }
+
+        .total_btn .confirm-black{
+            min-width: 150px;
+            height: 39px;
+            font-size: 14px;
+            line-height: 38px;
+            background-color: #000;
+            color: #fff;
+            display: inline-block;
+            padding: 0 20px;
+            text-align: center;
+            border: 1px solid #333;
+            border-radius: 0;
+            vertical-align: middle;
+            margin-left: 20px;
+        }
+
 
 
 
 
         
-
-
          
 
         </style>
@@ -362,21 +465,92 @@
             </div>
         </div>
 
-        <div class="myinfochk">
+        <div class="myinfo">
             <div class="title">
-                <h3>비밀번호 확인</h3>
-            </div>
-        
-            <div class="passwordchk-box">
-                <p class="chk_guide d-flex justify-content-center">회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
-                <div class="chkbox d-flex justify-content-center">
-                    <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw">
-                    <button class="btn" title="확인">확인</button>
-                </div>
+                <h3>회원정보 수정</h3><br/>
+                <h4>기본정보</h4>
             </div>
         </div>
 
+        <form th:action="@{/customer/myinfo.do}" method="post">
+            <div class="table-box d-flex justify-content-center">
+                <table class="tbl_info">
+                    <tbody>
+                        <tr>
+                            <th>아이디</th>
+                            <td id="td_id" th:text="${c.id}"></td>
+                        </tr>
+                        <tr>
+                            <th>이름</th>
+                            <td>
+                                <input type="text" name="name" th:value="${c.name}">
+                            </td>
+                        </tr>
+                        <tr>
+                        <th>닉네임</th> 
+                        <td>
+                                <input type="text" name="nickname" th:value="${c.nickname}">
+                        </td>
+                        </tr>
+                        <tr>
+                            <th>휴대폰번호</th>
+                            <td>
+                                <input type="text" name="phone" th:value="${c.phone}">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>비밀번호</th>
+                            <td>
+                                <div class="changepassword">
+                                    <p>
+                                        <div class="pw1">
+                                            <label>새 비밀번호</label>
+                                            <input type="password" id="pw" name="pw">
+                                        </div>
+                                    </p>
+                                    <p>
+                                        <div class="pw2">
+                                            <label>새 비밀번호 확인</label>
+                                            <input type="password" id="pwConfirm" name="pwConfirm">
+                                            <button class="btn-password" type="button" name="button">변경</button>
+                                        </div>
+                                    </p>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>이메일</th>
+                            <td class="email-box">
+                                <div class="email-test">
+                                    <input name="email1" type="text" th:value="${id}"> @ <input name="email2" type="text" th:value="${email}">
+                                    <select name="select_email" onChange="selectEmail(this)">
+                                        <option value="" selected>선택하세요</option>
+                                        <option value="naver.com">naver.com</option>
+                                        <option value="gmail.com">gmail.com</option>
+                                        <option value="hanmail.net">hanmail.net</option>
+                                        <option value="nate.com">nate.com</option>
+                                        <option value="1">직접입력</option>
+                                    </select>
+                                </div>
+                        
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
+
+                
+
+            </div>
+        
+
+            <div class="total_btn d-flex justify-content-center">
+                <button class="cancel-btn" type="button" name="button" onclick="location.href='/SOBUN/customer/mypage.do'">취소</button>
+                <button class="confirm-black" type="submit" name="button" >수정</button>
+            </div>
+
+        </form>
+        
 
         
 
@@ -388,6 +562,25 @@
 
 
     <!-- script-->
+
+    <!-- 이메일 셀렉박스 -->
+    <script>
+        function selectEmail(ele){
+            var $ele = $(ele);
+            var $email2 = $('input[name=email2]');
+
+            // '1'인경우 직접 입력
+            if($ele.val() == "1"){
+                $email2.attr('readonly', false);
+                $email2.val('');
+            }
+            else{
+                $email2.attr('readonly', true);
+                $email2.val($ele.val());
+            }
+        }
+    </script>
+
     
 </body>
 </html>
