--- a/src/main/resources/templates/gr/customer/mylikeitem.html
+++ b/src/main/resources/templates/gr/customer/mylikeitem.html
@@ -53,7 +53,6 @@
             text-align: center;
          }
 
-
          /* 마이페이지 메뉴 */
          #semi-titlebox{
             list-style: none;
@@ -89,14 +88,6 @@
             position: relative;
             line-height: 45px;
             display: list-item;
-         }
-
-         #submenu .submenu-header ul li.active{
-            background-color: #6D9275;
-         }
-
-         #submenu .submenu-header ul li.active a{
-            color: #fff;
          }
 
          #submenu .submenu-header ul li a{
@@ -175,110 +166,21 @@
             cursor: pointer;
         }
 
+        #submenu .submenu-header ul li.active{
+            background-color: #6D9275;
+         }
+
+         #submenu .submenu-header ul li.active a{
+            color: #fff;
+         }
+
         #submenu .submenu-closer {
             border-top: 1px solid #e5e5e5;
             margin: 0px 0px;
+
         }
 
-        /* 비밀번호 확인 창 */
-        .myinfochk{
-            width: 1240px;
-            margin: 0 auto;
-        }
 
-        .title{
-            height: 41px;
-            position: relative;
-            margin-bottom: 10px;
-        }
-        
-        .title h3{
-            color: #000;
-            font-size: 28px;
-            line-height: 36px;
-            display: inline-block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            margin: 0;
-            font-weight: bold;
-        }
-
-        .myinfochk .passwordchk-box{
-            width: 1234px;
-            height: 200px;
-            border: 3px solid #EFEFEF;
-        }
-
-        .myinfochk .passwordchk-box .chk_guide{
-            margin: 48px 0 0 0;
-            font-size: 16px;
-        }
-
-        .myinfochk .passwordchk-box input[type="password"]{
-            height: 40px;
-            margin-right: 5px;
-            line-height: 38px;
-            padding-left: 20px;
-            background-color: #f2f2f2;
-            border: 1px solid #efefef;
-            font-size: 14px;
-            vertical-align: middle;
-            margin-top: 25px;
-        }
-
-        .myinfochk .passwordchk-box .btn{
-            min-width: 140px;
-            height: 40px;
-            font-size: 14px;
-            line-height: 38px;
-            background-color: #000;
-            color: #fff;
-            display: inline-block;
-            padding: 0 20px;
-            text-align: center;
-            border: 1px solid #333;
-            margin-top: 25px;
-            border-radius: 0;
-        }
-
-        .total_btn{
-            text-align: center;
-        }
-
-        .total_btn .btn:first-child{
-            width: 1240px;
-        }
-
-        /* .total_btn .cancel-btn{
-            min-width: 120px;
-            padding: 0 20px;
-            height: 50px;
-            text-align: center;
-            line-height: 48px;
-            border: 1px solid #333;
-            background-color: #fff;
-            color: #000;
-            font-size: 14px;
-            vertical-align: middle;
-        } */
-
-        
-
-        .total_btn .btn{
-            min-width: 120px;
-            height: 39px;
-            font-size: 14px;
-            line-height: 38px;
-            background-color: #000;
-            color: #fff;
-            display: inline-block;
-            padding: 0 20px;
-            text-align: center;
-            border: 1px solid #333;
-            border-radius: 0;
-            vertical-align: middle;
-        }
 
 
 
@@ -308,9 +210,9 @@
                     &nbsp;&nbsp;>&nbsp;&nbsp;
                     <a th:href="@{/customer/mypage.do}" class="semi-title">MY PAGE</a>
                     &nbsp;&nbsp;>&nbsp;&nbsp;
-                    <a th:href="@{/customer/myinfochk.do}" class="semi-title">정보관리</a>
+                    <a th:href="@{/customer/mylikeitem.do}" class="semi-title">관심물품</a>
                     &nbsp;&nbsp;>&nbsp;&nbsp;
-                    <a th:href="@{/customer/myinfochk.do}" class="semi-title">회원정보 수정</a>
+                    <a th:href="@{/customer/mylikeitem.do}" class="semi-title">관심물품관리</a>
                     &nbsp;&nbsp;
                 </li>
             </ol>
@@ -319,13 +221,13 @@
         <div id="submenu">
             <div class="submenu-header d-flex justify-content-center">
                 <ul>
-                    <li>
+                    <li class="active">
                         <a th:href="@{/customer/mylikeitem.do}">관심물품</a>
                     </li>
                     <li>
                         <a th:href="@{/customer/myorderlist.do}">주문관리</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a th:href="@{/customer/myinfochk.do}">정보관리</a>
                     </li>
                 </ul>
@@ -361,21 +263,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="myinfochk">
-            <div class="title">
-                <h3>비밀번호 확인</h3>
-            </div>
-        
-            <div class="passwordchk-box">
-                <p class="chk_guide d-flex justify-content-center">회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
-                <div class="chkbox d-flex justify-content-center">
-                    <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw">
-                    <button class="btn" title="확인">확인</button>
-                </div>
-            </div>
-        </div>
-
 
 
         
