--- a/src/main/resources/templates/ikh/seller/item/search.html
+++ b/src/main/resources/templates/ikh/seller/item/search.html
@@ -197,7 +197,7 @@
                                         <table id="datatablesSimple">
                                             <thead>
                                                 <tr>
-                                                    <th>물품번호</th>
+                                                    <th>물품코드</th>
                                                     <th>물품이름</th>
                                                     <th>물품가격</th>
                                                     <th>물품수량</th>
@@ -209,7 +209,7 @@
                                             </thead>
                                             <tfoot>
                                                 <tr>
-                                                    <th>물품번호</th>                                                    
+                                                    <th>물품코드</th>                                                    
                                                     <th>물품이름</th>
                                                     <th>물품가격</th>
                                                     <th>물품수량</th>
