--- a/src/main/resources/templates/jk/seller/header.html
+++ b/src/main/resources/templates/jk/seller/header.html
@@ -29,7 +29,7 @@
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-person-circle"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="profile">
-                    <li><a class="dropdown-item" th:href="@{updateinfo.do}"><i class="fas fa-cog"></i> 내 정보
+                    <li><a class="dropdown-item" th:href="@{/seller/pwinfocheck.do}"><i class="fas fa-cog"></i> 내 정보
                             설정</a></li>
                     <li>
                         <hr class="dropdown-divider">
