--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -14,7 +14,7 @@
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/seller/updateinfo.do}">업체정보 수정하기</a>
+                            <a class="nav-link" th:href="@{/seller/pwinfocheck.do}">내정보 수정하기</a>
                             <a class="nav-link" th:href="@{/seller/updatepw.do}">비밀번호 변경하기</a>
                         </nav>
                     </div>
