--- a/src/main/resources/static/css/jk/seller_mypage.css
+++ b/src/main/resources/static/css/jk/seller_mypage.css
@@ -1,10 +1,8 @@
 @charset "UTF-8";
 @import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
 
-body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Arial, sans-serif;
+* {
+    font-family: 'NanumSquare', sans-serif;
 }
 
 .container {
