--- a/src/main/resources/templates/jk/seller/findpw.html
+++ b/src/main/resources/templates/jk/seller/findpw.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소분소분 - 업체 비밀번호 찾기</title>
+    <title>소분소분 - 판매자 비밀번호 찾기</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS -->
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller_loginStyle.css}'>
 </head>
 
-<body style="margin-top: 60px;">
-    <div
-        style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
+<body>
+    <div>
         <div class="text-center">
-            <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
-            <br />
+            <img th:src="@{/images/jk/logo1.png}" class="img-fluid mx-auto d-block" style="max-width: 350px;">
         </div>
-
-
+        <div class="text-center">
+            <h4 class="login-heading">판매자 전용 페이지</h4>
+        </div>
         <form name="findpw" th:action="@{/seller/findpw.do}" method="post">
             <div class="row">
                 <div class="col-sm">
                     <hr />
                     <br>
                     <div class="form-floating mb-2">
-                        <input type="text" id="id" name="no" class="form-control" onblur="ajaxIDCheck(this)"> 
+                        <input type="text" id="id" name="no" class="form-control" onblur="ajaxIDCheck(this)">
                         <label for="id" id="lbl_check" class="form-label">사업자번호 ( '-'는 생략 )</label>
                     </div>
                     <div class="form-floating mb-2">
@@ -44,12 +49,17 @@
                             onclick="findPwsubmit()" />
                         <a th:href="@{/seller/login.do}" class="btn btn-outline-secondary">로그인 화면으로</a>
                     </div>
-
                 </div>
             </div>
         </form>
+        <div class="text-center mt-4">
+            <h5 class="contact-heading">
+                <strong><i class="fas fa-phone-alt"></i> 판매자 콜센터</strong>
+            </h5>
+            <p class="contact-phone"><strong>1577 - 0000</strong></p>
+        </div>
     </div>
-    
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -63,6 +73,7 @@
     <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
 
     <script th:inline="javascript">
 
