--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -9,48 +9,38 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <style>
-        /* Chrome, Safari, Edge, Opera */
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        /* Firefox  */
-        input[type='number'] {
-            -moz-appearance: textfield;
-        }
-    </style>
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller_loginStyle.css}'>
 </head>
 
 <body style="margin-top: 60px">
-    <div
-        style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
+    <div>
         <div class="text-center">
-            <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
-            <br />
+            <img th:src="@{/images/jk/logo1.png}" class="img-fluid mx-auto d-block" style="max-width: 350px;">
         </div>
+        <div class="text-center">
+            <h4 class="login-heading">판매자 전용 페이지</h4>
+        </div>
+
         <form id="form" th:action="@{/seller/join.do}" method="post">
             <div class="row">
                 <div class="col-sm">
                     <hr />
+                    <br>
                     <div class="form-floating mb-2">
-                        <input type="text" id="id" name="no" class="form-control"
-                            onblur="ajaxIDCheck(this)" > <label for="id" id="lbl_check"
-                            class="form-label">사업자번호 ( '-'는 생략 )</label>
+                        <input type="text" id="id" name="no" class="form-control" onblur="ajaxIDCheck(this)"> <label
+                            for="id" id="lbl_check" class="form-label">사업자번호 ( '-'는 생략 )</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="password" id="pw" name="pw" class="form-control" required /> <label
-                            for="pw" id="lbl_pw" class="form-label">암호</label>
+                        <input type="password" id="pw" name="pw" class="form-control" required /> <label for="pw"
+                            id="lbl_pw" class="form-label">암호</label>
                     </div>
                     <div class="form-floating mb-2">
                         <input type="password" id="pw1" class="form-control" required onkeyup="pwCheck()" />
                         <label for="pw1" id="lbl_pwCheck" class="form-label">암호재확인</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="text" id="name" name="name" class="form-control" required /> <label
-                            for="name" class="form-label">업체명</label>
+                        <input type="text" id="name" name="name" class="form-control" required /> <label for="name"
+                            class="form-label">업체명</label>
                     </div>
                     <div class="form-floating mb-2">
                         <input type="number" id="phone" name="phone" class="form-control" />
@@ -60,6 +50,7 @@
                         <input type="email" id="email" name="email" class="form-control" />
                         <label for="email" class="form-label">이메일</label>
                     </div>
+                    <br>
                     <hr />
                     <div class="container text-center d-grid gap-2" style="padding: 0;">
                         <input type="button" class="btn btn-dark mb-3" onclick="sample6_execDaumPostcode()"
@@ -75,7 +66,7 @@
                             </div>
                         </div>
                         <input type="text" name="address3" class="form-control" id="sample6_detailAddress"
-                            placeholder="상세주소" >
+                            placeholder="상세주소">
                         <input type="text" name="address4" class="form-control" id="sample6_extraAddress"
                             placeholder="추가정보" hidden>
                     </div>
@@ -125,7 +116,7 @@
                 return false; //return: 반환하다 return false:  아무것도 반환하지 말아라 아래 코드부터 아무것도 진행하지 말것
             };
 
-        
+
             if (id.value.length < 10) { // 사업자번호가 10자리인지
                 alert("사업자번호가 너무 짧습니다. 다시 확인해주세요.");
                 id.focus();
@@ -218,7 +209,7 @@
             const pw1 = document.getElementById("pw1");
 
 
-            if(pw1.value.length < 8){
+            if (pw1.value.length < 8) {
                 document.getElementById("companyNewPwChk").innerText = "새 비밀번호 확인";
                 document.getElementById("companyNewPwChk").style.color = 'gray';
             }
