--- a/src/main/resources/templates/jk/seller/mypage/updatepw.html
+++ b/src/main/resources/templates/jk/seller/mypage/updatepw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>소분소분 - 판매자 페이지</title>
     <!-- 1. Bootstrap용 css CDN 추가 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
-    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller_update_pw.css}'>
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller_mypage.css}'>
 </head>
 
 <body class="sb-nav-fixed">
@@ -36,7 +36,7 @@
             <main style="padding-bottom: 10%; background-color: #ffffff;">
                 <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
                     <div class="container mt-5">
-                        <h1 class="mb-4">비밀번호 변경하기</h1>
+                        <h1 class="mb-4"><strong>비밀번호 변경하기</strong></h1>
                         <hr />
                         <form id="form" th:action="@{/seller/updatepw.do}" th:object="${seller}" method="post">
                             <input type="text" id="id" name="no" th:field="${seller.no}" hidden /><br />
